[gd_scene load_steps=22 format=3 uid="uid://6b8vrx5u05s2"]

[ext_resource type="Script" path="res://Scripts/player.gd" id="1_py3o4"]
[ext_resource type="Texture2D" uid="uid://d3po0m55crdiv" path="res://Asssets/attack.png" id="2_1elnq"]
[ext_resource type="PackedScene" uid="uid://hbrahvarrppl" path="res://Scenes/health.tscn" id="3_01fpk"]
[ext_resource type="Texture2D" uid="uid://ccvvq1q4rxetc" path="res://Asssets/Dash.png" id="3_pkavs"]
[ext_resource type="Texture2D" uid="uid://bjyxt2ml2jktj" path="res://Asssets/Jump.png" id="4_b0uor"]
[ext_resource type="Texture2D" uid="uid://cwwo6ncc8w616" path="res://Asssets/Walk.png" id="6_7sv2p"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_dbiij"]
size = Vector2(8, 16)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_u1a1t"]
size = Vector2(12, 20)

[sub_resource type="AtlasTexture" id="AtlasTexture_sr5sv"]
atlas = ExtResource("3_pkavs")
region = Rect2(48, 0, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_xhwla"]
atlas = ExtResource("4_b0uor")
region = Rect2(0, 0, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_yo3b8"]
atlas = ExtResource("4_b0uor")
region = Rect2(0, 0, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_f646r"]
atlas = ExtResource("4_b0uor")
region = Rect2(24, 0, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_nylon"]
atlas = ExtResource("4_b0uor")
region = Rect2(48, 0, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_a8dul"]
atlas = ExtResource("4_b0uor")
region = Rect2(72, 0, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_75a2c"]
atlas = ExtResource("6_7sv2p")
region = Rect2(0, 0, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_qkf7h"]
atlas = ExtResource("6_7sv2p")
region = Rect2(24, 0, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_dpe6c"]
atlas = ExtResource("6_7sv2p")
region = Rect2(48, 0, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_xxpau"]
atlas = ExtResource("6_7sv2p")
region = Rect2(72, 0, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_i8yup"]
atlas = ExtResource("6_7sv2p")
region = Rect2(96, 0, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_mhm82"]
atlas = ExtResource("6_7sv2p")
region = Rect2(120, 0, 24, 24)

[sub_resource type="SpriteFrames" id="SpriteFrames_257je"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_sr5sv")
}],
"loop": false,
"name": &"Dash",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_xhwla")
}],
"loop": true,
"name": &"Idle",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_yo3b8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_f646r")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_nylon")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_a8dul")
}],
"loop": false,
"name": &"Jump",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_75a2c")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qkf7h")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_dpe6c")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xxpau")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_i8yup")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_mhm82")
}],
"loop": true,
"name": &"Walk",
"speed": 5.0
}]

[node name="player" type="CharacterBody2D"]
z_index = 1
script = ExtResource("1_py3o4")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_dbiij")

[node name="Timers" type="Node" parent="."]

[node name="Dashing" type="Timer" parent="Timers"]
wait_time = 0.3

[node name="Dash Cooldown" type="Timer" parent="Timers"]
wait_time = 0.4

[node name="Attack" type="Timer" parent="Timers"]
wait_time = 0.25

[node name="Attack Cooldown" type="Timer" parent="Timers"]
wait_time = 0.3

[node name="Control Regain" type="Timer" parent="Timers"]
wait_time = 0.4

[node name="Hit Iframes" type="Timer" parent="Timers"]

[node name="Heal" type="Timer" parent="Timers"]
wait_time = 0.75
one_shot = true

[node name="Vampire" type="Timer" parent="Timers"]
wait_time = 7.0

[node name="Attack" type="Area2D" parent="."]
visible = false
position = Vector2(6, 28)
rotation = 3.14159
collision_layer = 4
collision_mask = 4

[node name="Collision" type="CollisionShape2D" parent="Attack"]
position = Vector2(6, 10)
shape = SubResource("RectangleShape2D_u1a1t")
disabled = true

[node name="Sprite2D" type="Sprite2D" parent="Attack"]
position = Vector2(6, 10)
texture = ExtResource("2_1elnq")

[node name="Hit Detector" type="Area2D" parent="."]
collision_layer = 8
collision_mask = 8

[node name="Collision" type="CollisionShape2D" parent="Hit Detector"]
z_index = 1
shape = SubResource("RectangleShape2D_dbiij")

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="ColorRect2" type="ColorRect" parent="CanvasLayer"]
offset_left = 10.0
offset_top = 50.0
offset_right = 194.0
offset_bottom = 74.0
color = Color(0, 0, 0, 1)

[node name="Health Bar" type="HBoxContainer" parent="CanvasLayer"]
offset_left = 10.0
offset_top = 10.0
offset_right = 160.0
offset_bottom = 40.0
theme_override_constants/separation = 10

[node name="health" parent="CanvasLayer/Health Bar" instance=ExtResource("3_01fpk")]
layout_mode = 2

[node name="ColorRect" type="ColorRect" parent="CanvasLayer"]
offset_left = 12.0
offset_top = 52.0
offset_right = 192.0
offset_bottom = 72.0
color = Color(0.2, 0.2, 0.27451, 1)

[node name="Mana" type="ColorRect" parent="CanvasLayer"]
offset_left = 12.0
offset_top = 52.0
offset_right = 192.0
offset_bottom = 72.0
color = Color(0.631373, 0.631373, 0.74902, 1)

[node name="Sprite" type="AnimatedSprite2D" parent="."]
position = Vector2(0, -4)
sprite_frames = SubResource("SpriteFrames_257je")
animation = &"Jump"
autoplay = "Idle"
frame = 3
frame_progress = 1.0

[connection signal="timeout" from="Timers/Dashing" to="." method="_on_dashing_timeout"]
[connection signal="timeout" from="Timers/Dash Cooldown" to="." method="_on_dash_cooldown_timeout"]
[connection signal="timeout" from="Timers/Attack" to="." method="_on_attack_timeout"]
[connection signal="timeout" from="Timers/Attack Cooldown" to="." method="_on_attack_cooldown_timeout"]
[connection signal="timeout" from="Timers/Control Regain" to="." method="_on_control_regain_timeout"]
[connection signal="timeout" from="Timers/Hit Iframes" to="." method="_on_hit_iframes_timeout"]
[connection signal="timeout" from="Timers/Heal" to="." method="_on_heal_timeout"]
[connection signal="timeout" from="Timers/Vampire" to="." method="_on_vampire_timeout"]
[connection signal="area_entered" from="Hit Detector" to="." method="_on_hit_detector_area_entered"]
